--- a/nuovo/nuovo.html
+++ b/nuovo/nuovo.html
@@ -1,228 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="nuovo.css">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link href="nuovo.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-    <div class="carica">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 icona">
-                    <div class="titolo-carica">
-                        <h1 style="font-size: 4vw; margin-right: 2%;">1. Carica </h1>
-                        <svg width="10vw" height="10vh" viewBox="2 3 40 23" fill="none"
-                            xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="0.00024000000000000003">
-                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
-                                stroke="#CCCCCC" stroke-width="0.288">
-                                <path
-                                    d="M18.22 20.75H5.78C5.43322 20.7359 5.09262 20.6535 4.77771 20.5075C4.4628 20.3616 4.17975 20.155 3.94476 19.8996C3.70977 19.6442 3.52745 19.3449 3.40824 19.019C3.28903 18.693 3.23525 18.3468 3.25 18V15C3.25 14.8011 3.32902 14.6103 3.46967 14.4697C3.61033 14.329 3.80109 14.25 4 14.25C4.19892 14.25 4.38968 14.329 4.53033 14.4697C4.67099 14.6103 4.75 14.8011 4.75 15V18C4.72419 18.2969 4.81365 18.5924 4.99984 18.8251C5.18602 19.0579 5.45465 19.21 5.75 19.25H18.22C18.5154 19.21 18.784 19.0579 18.9702 18.8251C19.1564 18.5924 19.2458 18.2969 19.22 18V15C19.22 14.8011 19.299 14.6103 19.4397 14.4697C19.5803 14.329 19.7711 14.25 19.97 14.25C20.1689 14.25 20.3597 14.329 20.5003 14.4697C20.641 14.6103 20.72 14.8011 20.72 15V18C20.75 18.6954 20.5041 19.3744 20.0359 19.8894C19.5677 20.4045 18.9151 20.7137 18.22 20.75Z"
-                                    fill="#ffffff"></path>
-                                <path
-                                    d="M16 8.74995C15.9015 8.75042 15.8038 8.7312 15.7128 8.69342C15.6218 8.65564 15.5392 8.60006 15.47 8.52995L12 5.05995L8.53 8.52995C8.38782 8.66243 8.19978 8.73455 8.00548 8.73113C7.81118 8.7277 7.62579 8.64898 7.48838 8.51157C7.35096 8.37416 7.27225 8.18877 7.26882 7.99447C7.2654 7.80017 7.33752 7.61213 7.47 7.46995L11.47 3.46995C11.6106 3.3295 11.8012 3.25061 12 3.25061C12.1987 3.25061 12.3894 3.3295 12.53 3.46995L16.53 7.46995C16.6705 7.61058 16.7493 7.8012 16.7493 7.99995C16.7493 8.1987 16.6705 8.38932 16.53 8.52995C16.4608 8.60006 16.3782 8.65564 16.2872 8.69342C16.1962 8.7312 16.0985 8.75042 16 8.74995Z"
-                                    fill="#ffffff"></path>
-                                <path
-                                    d="M12 15.75C11.8019 15.7474 11.6126 15.6676 11.4725 15.5275C11.3324 15.3874 11.2526 15.1981 11.25 15V4C11.25 3.80109 11.329 3.61032 11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5303 3.46967C12.671 3.61032 12.75 3.80109 12.75 4V15C12.7474 15.1981 12.6676 15.3874 12.5275 15.5275C12.3874 15.6676 12.1981 15.7474 12 15.75Z"
-                                    fill="#ffffff"></path>
-                            </g>
-                            <g id="SVGRepo_iconCarrier">
-                                <path
-                                    d="M18.22 20.75H5.78C5.43322 20.7359 5.09262 20.6535 4.77771 20.5075C4.4628 20.3616 4.17975 20.155 3.94476 19.8996C3.70977 19.6442 3.52745 19.3449 3.40824 19.019C3.28903 18.693 3.23525 18.3468 3.25 18V15C3.25 14.8011 3.32902 14.6103 3.46967 14.4697C3.61033 14.329 3.80109 14.25 4 14.25C4.19892 14.25 4.38968 14.329 4.53033 14.4697C4.67099 14.6103 4.75 14.8011 4.75 15V18C4.72419 18.2969 4.81365 18.5924 4.99984 18.8251C5.18602 19.0579 5.45465 19.21 5.75 19.25H18.22C18.5154 19.21 18.784 19.0579 18.9702 18.8251C19.1564 18.5924 19.2458 18.2969 19.22 18V15C19.22 14.8011 19.299 14.6103 19.4397 14.4697C19.5803 14.329 19.7711 14.25 19.97 14.25C20.1689 14.25 20.3597 14.329 20.5003 14.4697C20.641 14.6103 20.72 14.8011 20.72 15V18C20.75 18.6954 20.5041 19.3744 20.0359 19.8894C19.5677 20.4045 18.9151 20.7137 18.22 20.75Z"
-                                    fill="#ffffff"></path>
-                                <path
-                                    d="M16 8.74995C15.9015 8.75042 15.8038 8.7312 15.7128 8.69342C15.6218 8.65564 15.5392 8.60006 15.47 8.52995L12 5.05995L8.53 8.52995C8.38782 8.66243 8.19978 8.73455 8.00548 8.73113C7.81118 8.7277 7.62579 8.64898 7.48838 8.51157C7.35096 8.37416 7.27225 8.18877 7.26882 7.99447C7.2654 7.80017 7.33752 7.61213 7.47 7.46995L11.47 3.46995C11.6106 3.3295 11.8012 3.25061 12 3.25061C12.1987 3.25061 12.3894 3.3295 12.53 3.46995L16.53 7.46995C16.6705 7.61058 16.7493 7.8012 16.7493 7.99995C16.7493 8.1987 16.6705 8.38932 16.53 8.52995C16.4608 8.60006 16.3782 8.65564 16.2872 8.69342C16.1962 8.7312 16.0985 8.75042 16 8.74995Z"
-                                    fill="#ffffff"></path>
-                                <path
-                                    d="M12 15.75C11.8019 15.7474 11.6126 15.6676 11.4725 15.5275C11.3324 15.3874 11.2526 15.1981 11.25 15V4C11.25 3.80109 11.329 3.61032 11.4697 3.46967C11.6103 3.32902 11.8011 3.25 12 3.25C12.1989 3.25 12.3897 3.32902 12.5303 3.46967C12.671 3.61032 12.75 3.80109 12.75 4V15C12.7474 15.1981 12.6676 15.3874 12.5275 15.5275C12.3874 15.6676 12.1981 15.7474 12 15.75Z"
-                                    fill="#ffffff"></path>
-                            </g>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-
-                    <div class="descrizione-carica">
-                        <div class="descizione-sito" style="display: flex; justify-content:  center; flex-wrap: wrap;">
-
-                            <p style="text-align: center; font-size: 33px; color: #bcbcbc;">Carica in questa sezione il
-                                file del tuo programma scolastico</p>
-
-                            <p style="text-align: center; font-size: 25px; margin-left: -20%; margin-top: 20%; color: #ababab;">
-
-
-                                <svg width="6vw" height="6vh" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                    <g id="SVGRepo_iconCarrier">
-                                        <path
-                                            d="M12 7C12.5523 7 13 7.44772 13 8V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V8C11 7.44772 11.4477 7 12 7Z"
-                                            fill="#ffffff"></path>
-                                        <path
-                                            d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
-                                            fill="#ffffff"></path>
-                                        <path fill-rule="evenodd" clip-rule="evenodd"
-                                            d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 7.58172 7.58172 4 12 4C16.4183 4 20 7.58172 20 12C20 16.4183 16.4183 20 12 20C7.58172 20 4 16.4183 4 12Z"
-                                            fill="#ffffff"></path>
-                                    </g>
-                                </svg>
-                                scopri
-                            </p>
-
-                        </div>
-
-                        <div class="alert alert-warning" role="alert" style="height: fit-content; margin-top: 25%;">
-                            <div class="container-fluid">
-                                <div class="row">
-                            <div class="col text-center " ">
-                            <p style="font-size: 26px;">Il file Deve essere in formato PDF</p>
-                            </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-8">
-                    <div class="carica-file" id="carica-file">
-                        <div class="icona-clicca">
-                            <svg width="15vw" height="15vh" viewBox="0 0 24 24" id="Layer_1" data-name="Layer 1"
-                                xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke="#CCCCCC" stroke-width="1.152">
-                                    <defs>
-                                        <style>
-                                            .cls-1 {
-                                                fill: none;
-                                                stroke: #ffffff;
-                                                stroke-miterlimit: 10;
-                                                stroke-width: 1.91px;
-                                            }
-                                        </style>
-                                    </defs>
-                                    <path class="cls-1"
-                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
-                                    </path>
-                                    <path class="cls-1"
-                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
-                                    </path>
-                                </g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <defs>
-                                        <style>
-                                            .cls-1 {
-                                                fill: none;
-                                                stroke: #ffffff;
-                                                stroke-miterlimit: 10;
-                                                stroke-width: 1.91px;
-                                            }
-                                        </style>
-                                    </defs>
-                                    <path class="cls-1"
-                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
-                                    </path>
-                                    <path class="cls-1"
-                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
-                                    </path>
-                                </g>
-                            </svg>
-                        </div>
-                    </div>
-
-                    
-                </div>
-            </div>
-        </div>
+    <div class="titolo">
+        Carica il tuo file
     </div>
-    <div class="opzioni">
-        <div class="container-fluid">
-            <div class="row text-center">
-                <div class="titolo-opzioni">Scegli le tue preferenze</div>
-
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="descrizione-opzioni">
-                        <p style="font-size: 30px; text-align: center;">
-                            Ora è il momento di scegliere le tue preferenze
-                        </p>
-                        <div style="display: flex; margin-left: -7%;">
-                            <div style="margin-top: 6%;">
-                            <svg  width="100px" height="100px" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" data-dm-inline-stroke=""
-                                style="--dm-inline-stroke: #f2f0ed;">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <path d="M12 8L12 13" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
-                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
-                                    <path d="M12 16V15.9888" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
-                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
-                                </g>
-                            </svg>
-                            </div>
-                            <p
-                                style="font-size: 20px; text-align: center; color: rgba(255, 255, 255, 0.658); padding: 8%;">
-                                Influiranno pesantemente su come il tuo riassunto apparirà e su cosa conterrà.</p>
-                        </div>
-
-                        <div class="alert alert-primary" role="alert" style="height: fit-content; margin-top:15%;">
-                            <div class="container-fluid">
-                                <div class="row">
-                                    <div class="col text-center ">
-                                        <p style="font-size: 26px;">Mi raccomando, scegli con cura</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-8">
-                    <div class="def-opzioni">
-                        <div class="row">
-                            <div class="col">
-
-                            </div>
-                            <div class="col">
-
-                            </div>
-
-                        </div>
-                        <div class="row">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="attendi">
-
-    </div>
-
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="nuovo.js"></script>
 </body>
-
 </html>
